--- a/Presepi.html
+++ b/Presepi.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html>
+<html class="Sfondo">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8" />
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="StyleSheet.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@900&family=Rubik+Dirt&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Oswald&family=Playfair+Display:wght@900&family=Rubik+Dirt&display=swap" rel="stylesheet">
 
@@ -30,7 +31,11 @@
         <img class="bigImmage" src="Foto/banner.jpg" alt="Icona." />
     </div3>
 
-
+    <div class="product-intro">
+        <h1 class="Intro-Headline">Vi presentiamo la nostra nuova linea di articoli per presepe</h1>
+        <p class="Intro-Body">Siamo entusiasti di offrirvi una vasta gamma di articoli per presepe, fatti a mano per da sfoggiare durante le feste. Sfoglia la nostra selezione qui sotto e aggiungi un tocco di tradizione alla tua casa.</p>
+    </div>
+<div class="Product-List">
     <h2 style="text-align:center">Casa Singola</h2>
 
     <div class="card">
@@ -38,7 +43,7 @@
         <h1>Casa Singola</h1>
         <p class="price">32.00 € </p>
         <p>Casa singola per presepe.</p>
-        <p><button onclick="window.location.href='https://checkout.square.site/merchant/MLDZTTNM3A14X/checkout/TH5H5FBTHQUMXFRGZ2MCEURQ';"> Acquista</button></p>
+        <p><button onclick="window.open('https://checkout.square.site/merchant/MLDZTTNM3A14X/checkout/TH5H5FBTHQUMXFRGZ2MCEURQ', '_blank')"> Acquista </button></p>
     </div>
 
     <h2 style="text-align:center">Casa Singola</h2>
@@ -51,7 +56,7 @@
         <h1>Fontana</h1>
         <p class="price">23.00 € </p>
         <p> Fontana completa di pompa acqua.</p>
-        <p><button onclick="window.location.href='https://checkout.square.site/merchant/MLDZTTNM3A14X/checkout/ESUMR7OUOIDPCCYZ2JX7SCUC'" ;>Acquista</button></p>
+        <p><button onclick="window.open('https://checkout.square.site/merchant/MLDZTTNM3A14X/checkout/ESUMR7OUOIDPCCYZ2JX7SCUC', '_blank')"> Acquista </button></p>
     </div>
 
     <h2 style="text-align:center">Capanna</h2>
@@ -61,7 +66,7 @@
         <h1>Capanna Gesu'</h1>
         <p class="price">24.00 €</p>
         <p>Capanna per statuine cm.12 e 13 (figure non comprese)</p>
-        <p><button onclick="window.location.href='https://checkout.square.site/merchant/MLDZTTNM3A14X/checkout/EMG3ANKS2JL66YCIDU2HZMIO'">Acquista</button></p>
+        <p><button onclick="window.open('https://checkout.square.site/merchant/MLDZTTNM3A14X/checkout/EMG3ANKS2JL66YCIDU2HZMIO', '_blank')"> Acquista </button></p>
     </div>
 
     <h2 style="text-align:center">Mulino</h2>
@@ -71,7 +76,7 @@
         <h1>Mulino a vento</h1>
         <p class="price">38.00 €</p>
         <p>Mulino a vento per statuine presepe 8-10 cm</p>
-        <p><button onclick="window.location.href='https://checkout.square.site/merchant/MLDZTTNM3A14X/checkout/MXHUK7V3GZBKEIQQFA2TPQWT'">Acquista</button></p>
+        <p><button onclick="window.open('https://checkout.square.site/merchant/MLDZTTNM3A14X/checkout/MXHUK7V3GZBKEIQQFA2TPQWT', '_blank')"> Acquista </button></p>
     </div>
 
     <h2 style="text-align:center">Fattoria</h2>
@@ -81,7 +86,7 @@
         <h1>Fattoria con animali</h1>
         <p class="price">14.00 €</p>
         <p> Fattoria per presepi con animali. Adatta a statuine presepe 6 - 8 cm.</p>
-        <p><button onclick="window.location.href='https://checkout.square.site/merchant/MLDZTTNM3A14X/checkout/YERSO2OKTDEC4NHSZQWQEJGR'">Acquista</button></p>
+        <p><button onclick="window.open('https://checkout.square.site/merchant/MLDZTTNM3A14X/checkout/YERSO2OKTDEC4NHSZQWQEJGR', '_blank')"> Acquista </button></p>
     </div>
 
     <h2 style="text-align:center">Bottega</h2>
@@ -91,12 +96,14 @@
         <h1>Bottega</h1>
         <p class="price">27.00 €</p>
         <p>Bottega del Fabbro per figure da cm.6, 10, 12/13, 20, 30 (figure non comprese) </p>
-        <p><button onclick="window.location.href='https://checkout.square.site/merchant/MLDZTTNM3A14X/checkout/PGWPI3HQLAHHTCQXKYQWQQY7'">Acquista</button></p>
+        <p><button onclick="window.open('https://checkout.square.site/merchant/MLDZTTNM3A14X/checkout/PGWPI3HQLAHHTCQXKYQWQQY7', '_blank')"> Acquista </button></p>
     </div>
+</div>
 
-    <footer>
-        <p> Copyright ©2022 | All Rights Reserved | PresepeGang.IT </p>
-    </footer>
+<footer>
+    <p> SEGUICI 👉&nbsp&nbsp&nbsp <a href="https://www.youtube.com/" target="blank" style="color:black;"><i class="fa-brands fa-youtube fa-xl "></i></a> &nbsp <a href="https://www.facebook.com/" target="blank" style="color:black;""><i class="fa-brands fa-facebook-square fa-xl"></i></a> &nbsp <a href="https://www.instagram.com/" target="blank" style="color:black;"><i class="fa-brands fa-instagram fa-xl"></i></a> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Copyright ©2022 | All Rights Reserved | PresepeGang.IT </p>
+</footer>
+
 
 </body>
 </html>
