--- a/home.html
+++ b/home.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html>
+<html class="Sfondo">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="StyleSheet.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@900&family=Rubik+Dirt&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Oswald&family=Playfair+Display:wght@900&family=Rubik+Dirt&display=swap" rel="stylesheet">
 
@@ -32,7 +33,7 @@
 
 
     <div4>
-        <h1 class="headerCenter" style="font-family: 'Playfair Display', serif;">COME FUNZIONA?</h1>
+        <h1 class="headerCenter" style="font-family: 'Playfair Display', serif;">Benvenuti</h1>
         <p class="headerText" style="font-family: 'Oswald', sans-serif;">
             Su PresepeGang, l’unico limite è la tua immaginazione!
         </p>
@@ -45,17 +46,13 @@
     </div4>
 
     <div class="container" style="background-image: url(Foto/form.jpg);">
-        >
-        <form id="form" action="https://formsubmit.co/9007b7bb785b311bebf1340139474213" method="POST">
-            <input type="hidden" name="_next" value="http://localhost:57493/Conferma-Grazie.html">
-            <input type="hidden" name="_subject" value="Nuova Richiesta!">
-
+        <form>
             <div class="row">
                 <div class="col-25">
                     <label for="fname">NOME</label>
                 </div>
                 <div class="col-75">
-                    <input type="text" id="fname" name="firstname" placeholder="Il tuo nome..">
+                    <input style="color:black;         font-weight: bold;" type="text" id="fname" name="firstname" placeholder="Il tuo nome..">
                 </div>
             </div>
             <div class="row">
@@ -63,7 +60,7 @@
                     <label for="lname">COGNOME</label>
                 </div>
                 <div class="col-75">
-                    <input type="text" id="lname" name="lastname" placeholder="Il tuo cognome..">
+                    <input style="color:black;         font-weight: bold;" type="text" id="lname" name="lastname" placeholder="Il tuo cognome..">
                 </div>
             </div>
             <div class="row">
@@ -71,7 +68,7 @@
                     <label for="fname">EMAIL</label>
                 </div>
                 <div class="col-75">
-                    <input type="text" id="email" name="email" placeholder="La tua email..">
+                    <input style="color:black; width: 101.6%; height: 40px; font-weight: bold;" id="email" name="email" placeholder="La tua email..">
                 </div>
             </div>
             <div class="row">
@@ -79,7 +76,7 @@
                     <label for="subject">PROGETTO</label>
                 </div>
                 <div class="col-75">
-                    <textarea id="subject" name="subject" placeholder="Spiegaci il tuo progetto.." style="height:200px"></textarea>
+                    <textarea cols="30" rows="10" style="color:black; resize: none; font-weight: bold;" id="subject" name="subject" placeholder="Spiegaci il tuo progetto.."></textarea>
                 </div>
             </div>
             <div class="row">
@@ -88,11 +85,11 @@
             
         </form>
     </div>
-
-
-    <footer>
-        <p> Copyright ©2022 | All Rights Reserved | PresepeGang.IT </p>
-    </footer>
+<br>
+<br>
+<footer>
+    <p> SEGUICI 👉&nbsp&nbsp&nbsp <a href="https://www.youtube.com/" target="blank" style="color:black;"><i class="fa-brands fa-youtube fa-xl "></i></a> &nbsp <a href="https://www.facebook.com/" target="blank" style="color:black;""><i class="fa-brands fa-facebook-square fa-xl"></i></a> &nbsp <a href="https://www.instagram.com/" target="blank" style="color:black;"><i class="fa-brands fa-instagram fa-xl"></i></a> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Copyright ©2022 | All Rights Reserved | PresepeGang.IT </p>
+</footer>
 
 </body>
 
