--- a/ChiSiamo.html
+++ b/ChiSiamo.html
@@ -20,9 +20,9 @@
     <div id="navbar">
         <a id="logo"><img src="Foto/icona.jpg" width="80" height="80" alt="Icona."></a>
         <div id="navbar-right">
-            <a class="active" href="home.html">HOME</a>
-            <a class="active" href="Presepi.html">PRESEPI</a>
-            <a class="active" href="ChiSiamo.html">CHI SIAMO</a>
+            <a class="active" style="color: beige;" href="home.html">HOME</a>
+            <a class="active" style="color: beige;" href="Presepi.html">PRESEPI</a>
+            <a class="active" style="color: beige;" href="ChiSiamo.html">CHI SIAMO</a>
         </div>
     </div>
 
@@ -33,7 +33,9 @@
 
 
     <div4>
+        <div class="product-intro">
         <h1 class="headerCenter" style="font-family: 'Playfair Display', serif;">Presepe Gang</h1>
+        </div>
         <p class="headerText" style="font-family: 'Oswald', sans-serif;">
             La passione per l'allestimento di decorazioni Natalizie presso la Gang, è sempre stato un motivo di orgoglio, in particolare la creazione di strutture e progetti di presepi!
             Operando a livello locale da piu di 2 anni, abbiamo deciso di condividere la nostra passione anche sul web dove possiamo raggiungere anche te che ci stai leggendo.
