--- a/Presepi.html
+++ b/Presepi.html
@@ -20,9 +20,9 @@
     <div id="navbar">
         <a id="logo"><img src="Foto/icona.jpg" width="80" height="80" alt="Icona."></a>
         <div id="navbar-right">
-            <a class="active" href="home.html">HOME</a>
-            <a class="active" href="Presepi.html">PRESEPI</a>
-            <a class="active" href="ChiSiamo.html">CHI SIAMO</a>
+            <a class="active" style="color: beige;" href="home.html">HOME</a>
+            <a class="active" style="color: beige;" href="Presepi.html">PRESEPI</a>
+            <a class="active" style="color: beige;" href="ChiSiamo.html">CHI SIAMO</a>
         </div>
     </div>
 
