--- a/home.html
+++ b/home.html
@@ -20,9 +20,9 @@
     <div id="navbar">
         <a id="logo"><img src="Foto/icona.jpg" width="80" height="80" alt="Icona."></a>
         <div id="navbar-right">
-            <a class="active" href="home.html">HOME</a>
-            <a class="active" href="Presepi.html">PRESEPI</a>
-            <a class="active" href="ChiSiamo.html">CHI SIAMO</a>
+            <a class="active" style="color: beige;" href="home.html">HOME</a>
+            <a class="active" style="color: beige;" href="Presepi.html">PRESEPI</a>
+            <a class="active" style="color: beige;" href="ChiSiamo.html">CHI SIAMO</a>
         </div>
     </div>
 
@@ -33,7 +33,9 @@
 
 
     <div4>
+        <div class="product-intro">
         <h1 class="headerCenter" style="font-family: 'Playfair Display', serif;">Benvenuti</h1>
+        </div>
         <p class="headerText" style="font-family: 'Oswald', sans-serif;">
             Su PresepeGang, l’unico limite è la tua immaginazione!
         </p>
@@ -46,7 +48,7 @@
     </div4>
 
     <div class="container" style="background-image: url(Foto/form.jpg);">
-        <form>
+        <form action="form-submit.php" method="post">
             <div class="row">
                 <div class="col-25">
                     <label for="fname">NOME</label>
