--- a/home.html
+++ b/home.html
@@ -48,13 +48,13 @@
     </div4>
 
     <div class="container" style="background-image: url(Foto/form.jpg);">
-        <form action="form-submit.php" method="post">
+        <form action="https://formsubmit.co/riccardoreali05@gmail.com" method="POST">
             <div class="row">
                 <div class="col-25">
                     <label for="fname">NOME</label>
                 </div>
                 <div class="col-75">
-                    <input style="color:black;         font-weight: bold;" type="text" id="fname" name="firstname" placeholder="Il tuo nome..">
+                    <input style="color:black; font-weight: bold;" type="text" id="fname" name="firstname" placeholder="Il tuo nome..">
                 </div>
             </div>
             <div class="row">
@@ -62,7 +62,7 @@
                     <label for="lname">COGNOME</label>
                 </div>
                 <div class="col-75">
-                    <input style="color:black;         font-weight: bold;" type="text" id="lname" name="lastname" placeholder="Il tuo cognome..">
+                    <input style="color:black; font-weight: bold;" type="text" id="lname" name="lastname" placeholder="Il tuo cognome..">
                 </div>
             </div>
             <div class="row">
