--- a/home.html
+++ b/home.html
@@ -82,7 +82,7 @@
                 </div>
             </div>
             <div class="row">
-                <input onclick="Erase()" id="submit" value="Invia">
+                <input id="submit" value="Invia">
             </div>
             
         </form>
