--- a/home.html
+++ b/home.html
@@ -82,7 +82,7 @@
                 </div>
             </div>
             <div class="row">
-                <input id="submit" value="Invia">
+                <button type="submit" id="submit">Invia</button>
             </div>
             
         </form>
