--- a/home.html
+++ b/home.html
@@ -49,6 +49,12 @@
 
     <div class="container" style="background-image: url(Foto/form.jpg);">
         <form action="https://formsubmit.co/riccardoreali05@gmail.com" method="POST">
+
+          <!-- Honeypot-->
+          <input type="text" name="_honey" style="display: none;">
+          <!--Disable Captcha -->
+          <input type="hidden" name="_captcha" value="false">
+
             <div class="row">
                 <div class="col-25">
                     <label for="fname">NOME</label>
