--- a/home.html
+++ b/home.html
@@ -54,7 +54,7 @@
           <input type="text" name="_honey" style="display: none;">
           <!--Disable Captcha -->
           <input type="hidden" name="_captcha" value="false">
-          <input type="hidden" name="next" value="https://presepegang.netlify.app/grazie.html">
+          <input type="hidden" name="next" value="https://presepegang.netlify.app//grazie.html">
 
 
             <div class="row">
