--- a/home.html
+++ b/home.html
@@ -54,8 +54,8 @@
           <input type="text" name="_honey" style="display: none;">
           <!--Disable Captcha -->
           <input type="hidden" name="_captcha" value="false">
-          <input type="hidden" name="next" value="https://presepegang.netlify.app//grazie.html">
 
+          <input type="hidden" name="_next" value="https://presepegang.netlify.app//grazie.html">
 
             <div class="row">
                 <div class="col-25">
