--- a/home.html
+++ b/home.html
@@ -55,7 +55,7 @@
           <!--Disable Captcha -->
           <input type="hidden" name="_captcha" value="false">
 
-          <input type="hidden" name="_next" value="https://presepegang.netlify.app//grazie.html">
+          <input type="hidden" name="_next" value="https://presepegang.netlify.app/grazie.html">
 
             <div class="row">
                 <div class="col-25">
