--- a/home.html
+++ b/home.html
@@ -55,6 +55,7 @@
           <!--Disable Captcha -->
           <input type="hidden" name="_captcha" value="false">
 
+          <!--String to display grazie.html page after submitting the form -->
           <input type="hidden" name="_next" value="https://presepegang.netlify.app/grazie.html">
 
             <div class="row">
