--- a/grazie.html
+++ b/grazie.html
@@ -43,7 +43,7 @@
       </div>
         <h1>Grazie</h1> 
         <p>Il tuo messaggio e stato inviato con successo!<br/> Un membro dello staff ti contattera il prima possibile.</p>
-        <p>Torna alla home</p>
+        <button href="home.html">Torna alla home</button>
       </div>
     </body>
 </html>
