--- a/home.html
+++ b/home.html
@@ -56,7 +56,7 @@
           <input type="hidden" name="_captcha" value="false">
 
           <!--String to display grazie.html page after submitting the form -->
-          <input type="hidden" name="_next" value="https://presepegang.netlify.app/grazie.html" target="_blank">
+          <input type="hidden" name="_next" value="https://presepegang.netlify.app/grazie.html">
 
             <div class="row">
                 <div class="col-25">
