--- a/grazie.html
+++ b/grazie.html
@@ -43,7 +43,7 @@
       </div>
         <h1>Grazie</h1> 
         <p>Il tuo messaggio e stato inviato con successo!<br/> Un membro dello staff ti contattera il prima possibile.</p>
-        <button href="home.html">Torna alla home</button>
+        <a href="home.html"><button>Torna alla home</button></a>
       </div>
     </body>
 </html>
