--- a/home.html
+++ b/home.html
@@ -91,7 +91,7 @@
                 </div>
             </div>
             <div class="row">
-                <button type="submit" id="submit">Invia</button>
+                <button onclick="Erase();" type="submit" id="submit">Invia</button>
             </div>
             
         </form>
