--- a/grazie.html
+++ b/grazie.html
@@ -1,4 +1,4 @@
-<html class="Sfondo">
+<html>
   <head>
     
   </head>
@@ -6,6 +6,7 @@
       body {
         text-align: center;
         padding: 40px 0;
+        background-color:#292929;
       }
         h1 {
           color: #88B04B;
